# hub02-sdk

./: .gitignore  LICENSE  README.md
.github/workflows/: node-ci.yml  node-publish.yml  python-ci.yml  python-publish.yml
.omc/: project-memory.json
.omc/sessions/: 1eb9d7e0-fe3a-4600-a09e-e03d3a2db1df.json
.omc/state/sessions/1eb9d7e0-fe3a-4600-a09e-e03d3a2db1df/: session-started.json
docs/: integration-guide.md
docs/install/: PROMPT-BACKEND.md  PROMPT-CLIENT.md  PROMPT-SUPABASE.md  PROMPT.md  SKILL.md  hub02-supabase-session.ts
examples/node-browser/: README.md  index.html
examples/node-express/: README.md  package.json  server.js
examples/python-fastapi/: README.md  app.py  requirements.txt
node/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
node/src/: client.ts  global.ts  react.ts  server.ts  shared.ts
node/test/: client.test.ts  helpers.ts  server.test.ts
python/: README.md  pyproject.toml
python/src/hub02_sdk/: __init__.py  _shared.py  client.py  server.py
python/tests/: _helpers.py  conftest.py  test_client.py  test_fastapi.py  test_server.py
